Bug fix - team member page image position on mobile

--- a/themes/gv_sky/css/sass/team-member.sass
+++ b/themes/gv_sky/css/sass/team-member.sass
@@ -5,7 +5,7 @@
 .page-user
 	#main
 		background-color: $subwhite
-		padding: 0
+		padding: 60px 0
 
 	.main-wrap
 		position: relative
@@ -19,19 +19,19 @@
 // 	margin: 1em 0
 .team-member
 	position: absolute
-	top: -219px
+	top: -279px
 	width: 100%
 	+clearfix
 	box-sizing: border-box
 
 	+m(768)
-		top: -200px
+		top: -260px
 
 	+m(620)
-		top: -185px
+		top: -215px
 
 	+m(520)
-		top: -275px
+		top: -255px
 
 	&-pic
 		position: relative
